.metals/.reports/metals/2023-10-06/r_scala-toplevel-mtags_16-33-33-067
id: file://<WORKSPACE>/src/main/scala/day27/ImmExtension.scala:[62..62) in Input.VirtualFile("file://<WORKSPACE>/src/main/scala/day27/ImmExtension.scala", "package day27

import chisel3._
import chisel3.util._

class 
")
file://<WORKSPACE>/src/main/scala/day27/ImmExtension.scala:7: error: expected identifier; obtained eof

^